force-app/main/default/objects/Egg__c/fields/Age_of_Egg_at_OPU__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Egg_at_OPU__c</fullName>
    <description>Age that the patient in years when the egg was collected.</description>
    <label>Age of Egg at OPU</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>