force-app/main/default/objects/Egg__c/fields/Cycle_Egg_Collected_In__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Egg_Collected_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle Egg Collected In</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Eggs</relationshipLabel>
    <relationshipName>Eggs</relationshipName>
    <type>Lookup</type>
</CustomField>