force-app/main/default/objects/Egg__c/fields/Cycle_Egg_Consumed_In__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Egg_Consumed_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle Egg Consumed In</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Eggs (Cycle Egg Consumed In)</relationshipLabel>
    <relationshipName>Eggs1</relationshipName>
    <type>Lookup</type>
</CustomField>