force-app/main/default/objects/Egg__c/fields/Denuding_Scientist__c.field-meta.xml
<CustomField>
    <fullName>Denuding_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Denuding Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Eggs2</relationshipName>
    <type>Lookup</type>
</CustomField>