force-app/main/default/objects/Egg__c/fields/Fate__c.field-meta.xml
<CustomField>
    <fullName>Fate__c</fullName>
    <label>Fate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumed</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Discarded</fullName>
            </value>
            <value>
                <fullName>Denuded</fullName>
            </value>
            <value>
                <fullName>Trimmed</fullName>
            </value>
            <value>
                <fullName>Transported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>