force-app/main/default/objects/Egg__c/fields/Initial_Cryopreservation_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Cryopreservation_Date__c</fullName>
    <label>Initial Cryopreservation Date</label>
    <type>Date</type>
</CustomField>