force-app/main/default/objects/Egg__c/fields/Patient_Donor__c.field-meta.xml
<CustomField>
    <fullName>Patient_Donor__c</fullName>
    <formula>Egg_Cohort__r.Donor_Owner__r.FirstName &amp;&quot; &quot;&amp; Egg_Cohort__r.Donor_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient/Donor</label>
    <type>Text</type>
</CustomField>