force-app/main/default/objects/Egg__c/fields/Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Storage Location</label>
    <referenceTo>Storage_Location__c</referenceTo>
    <relationshipLabel>Eggs</relationshipLabel>
    <relationshipName>Eggs</relationshipName>
    <type>Lookup</type>
</CustomField>