force-app/main/default/objects/Egg__c/listViews/All_Storage.listView-meta.xml
<ListView>
    <fullName>All_Storage</fullName>
    <columns>Egg_Cohort__c</columns>
    <columns>NAME</columns>
    <columns>Age_of_Egg_at_OPU__c</columns>
    <columns>Cycle_Egg_Collected_In__c</columns>
    <columns>Denuded__c</columns>
    <columns>Initial_Cryopreservation_Date__c</columns>
    <columns>Storage_Date__c</columns>
    <columns>Storage_Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Storage</label>
</ListView>